--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
         }else if (_folderInfo.DE_PW.length>0){
             // if _folderInfo.DE_PW existed, just return.
-            studyEncodedUrl = document.location.origin + "/DesignExplorer/?ID=" + _folderInfo.DE_PW; 
+            studyEncodedUrl = document.location.origin + "/CVP.App.DesignExplorer/?ID=" + _folderInfo.DE_PW; 
             d3.select("#showShortUrl").html("https://goo.gl/" +_folderInfo.DE_PW);
             d3.select("#myStudyID").html(studyEncodedUrl); 
             $("#showStillLink").modal();
